[package]
name = "sqlitedumper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.8"
log = "0.4.28"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["backup"] }
tokio = { version = "1.48.0", features = ["full"] }
